--- a/Pages/Consultas/Reorden.razor
+++ b/Pages/Consultas/Reorden.razor
@@ -8,7 +8,7 @@
 <EditForm Model="lista">
 
     <a type="button" class="rz-border-radius-4 shadow border border-4 btn-lg btn btn-warning" data-toggle="tooltip"
-       data-placement="right" title="Regresar al inventario" href="inventario">
+       data-placement="right" title="Regresar al inventario" href="inventarioArticulos">
         <i
             class="oi oi-arrow-circle-left"/>
     </a>
