--- a/Pages/Registros/R_Articulos.razor
+++ b/Pages/Registros/R_Articulos.razor
@@ -40,14 +40,14 @@
                         <label>Nombre</label>
                         <InputText @bind-Value="articulo.Nombre" placeholder="Nombre articulo" class="form-control" />
                         <ValidationMessage For="@(() => articulo.Nombre)" />
-                            <br>
+                        <br>
                     </div>
-                    
+
                 </div>
 
-                       <div class="row">
+                <div class="row">
 
-                     @*...................... Categoria ......................*@
+                    @*...................... Categoria ......................*@
 
                     <div class="form-group col-3">
                         <label>
@@ -68,11 +68,13 @@
 
                     @*...................... Suplidor ......................*@
 
-                      <div class="form-group col-md-3">
+                    <div class="form-group col-md-3">
                         <label>
                             Suplidor
-                            <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-truck" viewBox="0 0 16 16">
-                                <path d="M0 3.5A1.5 1.5 0 0 1 1.5 2h9A1.5 1.5 0 0 1 12 3.5V5h1.02a1.5 1.5 0 0 1 1.17.563l1.481 1.85a1.5 1.5 0 0 1 .329.938V10.5a1.5 1.5 0 0 1-1.5 1.5H14a2 2 0 1 1-4 0H5a2 2 0 1 1-3.998-.085A1.5 1.5 0 0 1 0 10.5v-7zm1.294 7.456A1.999 1.999 0 0 1 4.732 11h5.536a2.01 2.01 0 0 1 .732-.732V3.5a.5.5 0 0 0-.5-.5h-9a.5.5 0 0 0-.5.5v7a.5.5 0 0 0 .294.456zM12 10a2 2 0 0 1 1.732 1h.768a.5.5 0 0 0 .5-.5V8.35a.5.5 0 0 0-.11-.312l-1.48-1.85A.5.5 0 0 0 13.02 6H12v4zm-9 1a1 1 0 1 0 0 2 1 1 0 0 0 0-2zm9 0a1 1 0 1 0 0 2 1 1 0 0 0 0-2z" />
+                            <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor"
+                                class="bi bi-truck" viewBox="0 0 16 16">
+                                <path
+                                    d="M0 3.5A1.5 1.5 0 0 1 1.5 2h9A1.5 1.5 0 0 1 12 3.5V5h1.02a1.5 1.5 0 0 1 1.17.563l1.481 1.85a1.5 1.5 0 0 1 .329.938V10.5a1.5 1.5 0 0 1-1.5 1.5H14a2 2 0 1 1-4 0H5a2 2 0 1 1-3.998-.085A1.5 1.5 0 0 1 0 10.5v-7zm1.294 7.456A1.999 1.999 0 0 1 4.732 11h5.536a2.01 2.01 0 0 1 .732-.732V3.5a.5.5 0 0 0-.5-.5h-9a.5.5 0 0 0-.5.5v7a.5.5 0 0 0 .294.456zM12 10a2 2 0 0 1 1.732 1h.768a.5.5 0 0 0 .5-.5V8.35a.5.5 0 0 0-.11-.312l-1.48-1.85A.5.5 0 0 0 13.02 6H12v4zm-9 1a1 1 0 1 0 0 2 1 1 0 0 0 0-2zm9 0a1 1 0 1 0 0 2 1 1 0 0 0 0-2z" />
                             </svg>
                         </label>
                         <select @bind="articulo.SuplidorId" class="form-select text-14">
@@ -85,10 +87,10 @@
                         </select>
                         <br>
                     </div>
-                    
-                </div>         
 
-                   <div class="row">
+                </div>
+
+                <div class="row">
 
                     @*...................... Cantidad ......................*@
 
@@ -102,25 +104,25 @@
                         <label>Costo / Unidad</label>
                         <InputNumber @bind-Value="articulo.Costo" class="form-control" />
                         <ValidationMessage For="@(() => articulo.Costo)" />
-                            <br>
+                        <br>
                     </div>
-                    
+
                 </div>
-                          
 
-                    @*...................... Consultar Articulo ......................*@
 
+                @*...................... Consultar Articulo ......................*@
+
+                <div class="form-group col-md-3">
                     <p />
-                    <p />
-                    <div class="form-group col-md-3" style="margin: auto;">
-                        <a class="rz-border-radius-4 shadow border border-4 btn btn-lg btn btn-warning"
-                           data-toggle="tooltip" data-placement="right" title="Ingresar al inventario"
-                           href="inventarioArticulos">
-                            Articulos
-                            <i class="oi oi-cart"></i>
-                        </a>
-                    </div>
-              
+                    <a style="position: absolute; top:0;  right:0; margin-right: 10px; margin-top: 80px;"
+                        class="rz-border-radius-4 shadow border border-4 btn btn-lg btn btn-warning"
+                        data-toggle="tooltip" data-placement="right" title="Ingresar al inventario"
+                        href="inventarioArticulos">
+                        Articulos
+                        <i class="oi oi-cart"></i>
+                    </a>
+                </div>
+
                 <br>
 
                 @*...................... Botones ......................*@
@@ -132,12 +134,13 @@
                             <span class="oi oi-file"> Nuevo</span>
                         </button>
 
-                        <button type="button" class="btn btn-lg btn-success" @onclick="Guardar" title="Guardar articulo">
+                        <button type="button" class="btn btn-lg btn-success" @onclick="Guardar"
+                            title="Guardar articulo">
                             <span class="oi oi-document"> Guardar</span>
                         </button>
 
                         <button type="button" class="btn btn-lg btn-danger" @onclick="Eliminar"
-                                title="Eliminar articulo">
+                            title="Eliminar articulo">
                             <span class="oi oi-trash"> Eliminar</span>
                         </button>
                     </div>
@@ -215,9 +218,9 @@
             return;
         }
 
-        
 
-        
+
+
 
         if (articulo.CantidadRegistrada == 0)
         {
@@ -261,7 +264,7 @@
             }
         }
     }
-    
+
 
     public void Buscar() // Buscar articulo
     {
