--- a/Pages/Registros/R_Ventas.razor
+++ b/Pages/Registros/R_Ventas.razor
@@ -21,8 +21,10 @@
             <div class="card-header">
                 <h3 class="card-title">
                     Registro Ventas
-                    <svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" fill="currentColor" class="bi bi-shop" viewBox="0 0 16 16">
-                        <path d="M2.97 1.35A1 1 0 0 1 3.73 1h8.54a1 1 0 0 1 .76.35l2.609 3.044A1.5 1.5 0 0 1 16 5.37v.255a2.375 2.375 0 0 1-4.25 1.458A2.371 2.371 0 0 1 9.875 8 2.37 2.37 0 0 1 8 7.083 2.37 2.37 0 0 1 6.125 8a2.37 2.37 0 0 1-1.875-.917A2.375 2.375 0 0 1 0 5.625V5.37a1.5 1.5 0 0 1 .361-.976l2.61-3.045zm1.78 4.275a1.375 1.375 0 0 0 2.75 0 .5.5 0 0 1 1 0 1.375 1.375 0 0 0 2.75 0 .5.5 0 0 1 1 0 1.375 1.375 0 1 0 2.75 0V5.37a.5.5 0 0 0-.12-.325L12.27 2H3.73L1.12 5.045A.5.5 0 0 0 1 5.37v.255a1.375 1.375 0 0 0 2.75 0 .5.5 0 0 1 1 0zM1.5 8.5A.5.5 0 0 1 2 9v6h1v-5a1 1 0 0 1 1-1h3a1 1 0 0 1 1 1v5h6V9a.5.5 0 0 1 1 0v6h.5a.5.5 0 0 1 0 1H.5a.5.5 0 0 1 0-1H1V9a.5.5 0 0 1 .5-.5zM4 15h3v-5H4v5zm5-5a1 1 0 0 1 1-1h2a1 1 0 0 1 1 1v3a1 1 0 0 1-1 1h-2a1 1 0 0 1-1-1v-3zm3 0h-2v3h2v-3z" />
+                    <svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" fill="currentColor"
+                        class="bi bi-shop" viewBox="0 0 16 16">
+                        <path
+                            d="M2.97 1.35A1 1 0 0 1 3.73 1h8.54a1 1 0 0 1 .76.35l2.609 3.044A1.5 1.5 0 0 1 16 5.37v.255a2.375 2.375 0 0 1-4.25 1.458A2.371 2.371 0 0 1 9.875 8 2.37 2.37 0 0 1 8 7.083 2.37 2.37 0 0 1 6.125 8a2.37 2.37 0 0 1-1.875-.917A2.375 2.375 0 0 1 0 5.625V5.37a1.5 1.5 0 0 1 .361-.976l2.61-3.045zm1.78 4.275a1.375 1.375 0 0 0 2.75 0 .5.5 0 0 1 1 0 1.375 1.375 0 0 0 2.75 0 .5.5 0 0 1 1 0 1.375 1.375 0 1 0 2.75 0V5.37a.5.5 0 0 0-.12-.325L12.27 2H3.73L1.12 5.045A.5.5 0 0 0 1 5.37v.255a1.375 1.375 0 0 0 2.75 0 .5.5 0 0 1 1 0zM1.5 8.5A.5.5 0 0 1 2 9v6h1v-5a1 1 0 0 1 1-1h3a1 1 0 0 1 1 1v5h6V9a.5.5 0 0 1 1 0v6h.5a.5.5 0 0 1 0 1H.5a.5.5 0 0 1 0-1H1V9a.5.5 0 0 1 .5-.5zM4 15h3v-5H4v5zm5-5a1 1 0 0 1 1-1h2a1 1 0 0 1 1 1v3a1 1 0 0 1-1 1h-2a1 1 0 0 1-1-1v-3zm3 0h-2v3h2v-3z" />
                     </svg>
                 </h3>
             </div>
@@ -66,14 +68,15 @@
                             <div class="oi oi-cart"></div>
                         </label>
                         <select @bind="ArticuloSeleccionado" class="form-select text-14"
-                                @onfocusout="ObtenerDatosArticulo">
+                            @onfocusout="ObtenerDatosArticulo">
                             <option value="0" disabled selected> Seleccione un articulo </option>
                             @foreach (Articulo item in ArticuloList)
                             {
-                                if (articulo.Precio > 0){
-                                     <option value="@item.ArticuloId">@item.Nombre</option>
+                                if (articulo.Precio > 0)
+                                {
+                                    <option value="@item.ArticuloId">@item.Nombre</option>
                                 }
-                                
+
                             }
                         </select>
                     </div>
@@ -98,7 +101,8 @@
 
                     <div class="form-group col">
                         <br>
-                        <button type="button" class="btn btn-añadir" @onclick="AgregarDetalle" title="Añadir detalle de venta">
+                        <button type="button" class="btn btn-añadir" @onclick="AgregarDetalle"
+                            title="Añadir detalle de venta">
                             <span class="oi oi-plus"> Add</span>
                         </button>
                     </div>
@@ -131,7 +135,7 @@
                                     <td>RD$ @item.Importe</td>
                                     <td>
                                         <a class="btn-group-sm btn-close btn btn-group-lg btn-outline-danger"
-                                   @onclick="(() => RemoverDetalle(item))">
+                                    @onclick="(() => RemoverDetalle(item))">
                                         </a>
                                     </td>
                                 </tr>
@@ -148,10 +152,14 @@
                     <div class="form-group col-3">
                         <label>
                             Metodo de pago
-                            <svg xmlns="http://www.w3.org/2000/svg" width="23" height="23" fill="currentColor" class="bi bi-cash-coin" viewBox="0 0 16 16">
-                                <path fill-rule="evenodd" d="M11 15a4 4 0 1 0 0-8 4 4 0 0 0 0 8zm5-4a5 5 0 1 1-10 0 5 5 0 0 1 10 0z" />
-                                <path d="M9.438 11.944c.047.596.518 1.06 1.363 1.116v.44h.375v-.443c.875-.061 1.386-.529 1.386-1.207 0-.618-.39-.936-1.09-1.1l-.296-.07v-1.2c.376.043.614.248.671.532h.658c-.047-.575-.54-1.024-1.329-1.073V8.5h-.375v.45c-.747.073-1.255.522-1.255 1.158 0 .562.378.92 1.007 1.066l.248.061v1.272c-.384-.058-.639-.27-.696-.563h-.668zm1.36-1.354c-.369-.085-.569-.26-.569-.522 0-.294.216-.514.572-.578v1.1h-.003zm.432.746c.449.104.655.272.655.569 0 .339-.257.571-.709.614v-1.195l.054.012z" />
-                                <path d="M1 0a1 1 0 0 0-1 1v8a1 1 0 0 0 1 1h4.083c.058-.344.145-.678.258-1H3a2 2 0 0 0-2-2V3a2 2 0 0 0 2-2h10a2 2 0 0 0 2 2v3.528c.38.34.717.728 1 1.154V1a1 1 0 0 0-1-1H1z" />
+                            <svg xmlns="http://www.w3.org/2000/svg" width="23" height="23" fill="currentColor"
+                                class="bi bi-cash-coin" viewBox="0 0 16 16">
+                                <path fill-rule="evenodd"
+                                    d="M11 15a4 4 0 1 0 0-8 4 4 0 0 0 0 8zm5-4a5 5 0 1 1-10 0 5 5 0 0 1 10 0z" />
+                                <path
+                                    d="M9.438 11.944c.047.596.518 1.06 1.363 1.116v.44h.375v-.443c.875-.061 1.386-.529 1.386-1.207 0-.618-.39-.936-1.09-1.1l-.296-.07v-1.2c.376.043.614.248.671.532h.658c-.047-.575-.54-1.024-1.329-1.073V8.5h-.375v.45c-.747.073-1.255.522-1.255 1.158 0 .562.378.92 1.007 1.066l.248.061v1.272c-.384-.058-.639-.27-.696-.563h-.668zm1.36-1.354c-.369-.085-.569-.26-.569-.522 0-.294.216-.514.572-.578v1.1h-.003zm.432.746c.449.104.655.272.655.569 0 .339-.257.571-.709.614v-1.195l.054.012z" />
+                                <path
+                                    d="M1 0a1 1 0 0 0-1 1v8a1 1 0 0 0 1 1h4.083c.058-.344.145-.678.258-1H3a2 2 0 0 0-2-2V3a2 2 0 0 0 2-2h10a2 2 0 0 0 2 2v3.528c.38.34.717.728 1 1.154V1a1 1 0 0 0-1-1H1z" />
                                 <path d="M9.998 5.083 10 5a2 2 0 1 0-3.132 1.65 5.982 5.982 0 0 1 3.13-1.567z" />
                             </svg>
                         </label>
@@ -197,7 +205,7 @@
                     <div class="form-group col-2">
                         <label>Pago Obtenido</label>
                         <InputNumber @bind-Value="venta.PagoObtenido" @onfocusout="ObtenerDevuelta"
-                                     class="form-control" />
+                            class="form-control" />
                         <ValidationMessage For="@(() => venta.PagoObtenido)" />
                     </div>
 
@@ -214,11 +222,14 @@
 
                 <div class="form-group col-md-3" style="margin: auto;">
                     <a class="rz-border-radius-4 shadow border border-4 btn btn-lg btn btn-warning"
-                       data-toggle="tooltip" data-placement="right" title="Ingresar al reporte de ventas"
-                       href="reporteventas">
+                        data-toggle="tooltip" data-placement="right" title="Ingresar al reporte de ventas"
+                        href="reporteventas"
+                        style="position: absolute; top:0;  right:0; margin-right: 10px; margin-top: 460px;">
                         Ventas
-                        <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-shop" viewBox="0 0 16 16">
-                            <path d="M2.97 1.35A1 1 0 0 1 3.73 1h8.54a1 1 0 0 1 .76.35l2.609 3.044A1.5 1.5 0 0 1 16 5.37v.255a2.375 2.375 0 0 1-4.25 1.458A2.371 2.371 0 0 1 9.875 8 2.37 2.37 0 0 1 8 7.083 2.37 2.37 0 0 1 6.125 8a2.37 2.37 0 0 1-1.875-.917A2.375 2.375 0 0 1 0 5.625V5.37a1.5 1.5 0 0 1 .361-.976l2.61-3.045zm1.78 4.275a1.375 1.375 0 0 0 2.75 0 .5.5 0 0 1 1 0 1.375 1.375 0 0 0 2.75 0 .5.5 0 0 1 1 0 1.375 1.375 0 1 0 2.75 0V5.37a.5.5 0 0 0-.12-.325L12.27 2H3.73L1.12 5.045A.5.5 0 0 0 1 5.37v.255a1.375 1.375 0 0 0 2.75 0 .5.5 0 0 1 1 0zM1.5 8.5A.5.5 0 0 1 2 9v6h1v-5a1 1 0 0 1 1-1h3a1 1 0 0 1 1 1v5h6V9a.5.5 0 0 1 1 0v6h.5a.5.5 0 0 1 0 1H.5a.5.5 0 0 1 0-1H1V9a.5.5 0 0 1 .5-.5zM4 15h3v-5H4v5zm5-5a1 1 0 0 1 1-1h2a1 1 0 0 1 1 1v3a1 1 0 0 1-1 1h-2a1 1 0 0 1-1-1v-3zm3 0h-2v3h2v-3z" />
+                        <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor"
+                            class="bi bi-shop" viewBox="0 0 16 16">
+                            <path
+                                d="M2.97 1.35A1 1 0 0 1 3.73 1h8.54a1 1 0 0 1 .76.35l2.609 3.044A1.5 1.5 0 0 1 16 5.37v.255a2.375 2.375 0 0 1-4.25 1.458A2.371 2.371 0 0 1 9.875 8 2.37 2.37 0 0 1 8 7.083 2.37 2.37 0 0 1 6.125 8a2.37 2.37 0 0 1-1.875-.917A2.375 2.375 0 0 1 0 5.625V5.37a1.5 1.5 0 0 1 .361-.976l2.61-3.045zm1.78 4.275a1.375 1.375 0 0 0 2.75 0 .5.5 0 0 1 1 0 1.375 1.375 0 0 0 2.75 0 .5.5 0 0 1 1 0 1.375 1.375 0 1 0 2.75 0V5.37a.5.5 0 0 0-.12-.325L12.27 2H3.73L1.12 5.045A.5.5 0 0 0 1 5.37v.255a1.375 1.375 0 0 0 2.75 0 .5.5 0 0 1 1 0zM1.5 8.5A.5.5 0 0 1 2 9v6h1v-5a1 1 0 0 1 1-1h3a1 1 0 0 1 1 1v5h6V9a.5.5 0 0 1 1 0v6h.5a.5.5 0 0 1 0 1H.5a.5.5 0 0 1 0-1H1V9a.5.5 0 0 1 .5-.5zM4 15h3v-5H4v5zm5-5a1 1 0 0 1 1-1h2a1 1 0 0 1 1 1v3a1 1 0 0 1-1 1h-2a1 1 0 0 1-1-1v-3zm3 0h-2v3h2v-3z" />
                         </svg>
                     </a>
                 </div>
@@ -238,7 +249,8 @@
                             <span class="oi oi-document"> Guardar</span>
                         </button>
 
-                        <button type="button" class="btn btn-lg btn-danger" @onclick="Eliminar" title="Eliminar registro de venta">
+                        <button type="button" class="btn btn-lg btn-danger" @onclick="Eliminar"
+                            title="Eliminar registro de venta">
                             <span class="oi oi-trash"> Eliminar</span>
                         </button>
                     </div>
@@ -246,7 +258,6 @@
             </div>
         </div>
     </div>
-
 </EditForm>
 
 @code {
@@ -341,12 +352,12 @@
 
     private void ObtenerDatosArticulo() // Obteniendo los datos del articulo seleccionado
     {
-       Articulo auxArticulo = articuloBLL.Buscar(ArticuloSeleccionado);
+        Articulo auxArticulo = articuloBLL.Buscar(ArticuloSeleccionado);
 
         if (auxArticulo != null)
         {
             precioArticuloComprado = auxArticulo.Precio; // Mostrando el precio del articulo seleccionado
-            //descripcion = auxCompra.ArticuloComprado; // Obteniendo el nombre del articulo
+                                                         //descripcion = auxCompra.ArticuloComprado; // Obteniendo el nombre del articulo
 
             venta.Existencia = auxArticulo.CantidadComprada; // Mostrando la cantidad de unidades del articulo seleccionado
 
@@ -373,7 +384,7 @@
 
     private void ObtenerDevuelta() // Devuelta que le sobra al cliente
     {
-       Articulo auxArticulo = articuloBLL.Buscar(ArticuloSeleccionado);
+        Articulo auxArticulo = articuloBLL.Buscar(ArticuloSeleccionado);
 
         if (auxArticulo != null)
         {
@@ -537,7 +548,7 @@
         Toast.ShowInfo("Detalle removido");
         this.venta.ventasDetalle.Remove(item);
 
-        Articulo auxArticulo= articuloBLL.Buscar(ArticuloSeleccionado);
+        Articulo auxArticulo = articuloBLL.Buscar(ArticuloSeleccionado);
 
         if (auxArticulo != null)
         {
@@ -548,7 +559,7 @@
 
     public void MostrarImporte() // Calculando el Total
     {
-        Articulo auxArticulo= articuloBLL.Buscar(ArticuloSeleccionado);
+        Articulo auxArticulo = articuloBLL.Buscar(ArticuloSeleccionado);
 
         if (auxArticulo != null)
         {
@@ -574,4 +585,4 @@
         else
             Toast.ShowError("No fue posible eliminar");
     }
-} 
+}
