--- a/Shared/MainLayout.razor
+++ b/Shared/MainLayout.razor
@@ -10,7 +10,7 @@
 
     <main>
         <div class="top-row px-4">
-             <LoginDisplay />
+            <LoginDisplay />
             <a href="https://docs.microsoft.com/aspnet/" target="_blank">About</a>
         </div>
 
@@ -18,12 +18,6 @@
             @Body
         </article>
     </main>
-</div>  
-<BlazoredToasts
-                Timeout="3"
-                IconType="IconType.Material"
-                SuccessClass="success-toast-override"
-                SuccessIcon="✔️"
-                WarningIcon="⚠️"
-                InfoIcon="📝"
-                ErrorIcon="❌" />
+</div>
+<BlazoredToasts Timeout="3" IconType="IconType.Material" SuccessClass="success-toast-override" SuccessIcon="✔️"
+    WarningIcon="⚠️" InfoIcon="📝" ErrorIcon="❌" />
